...
        app:layout_constraintHorizontal_bias="0.769"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.159" />

    <RadioGroup
        android:id="@+id/instrumentAttributeGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:background="#9EA3A3"
        app:layout_constraintBottom_toTopOf="@+id/instrumentRate"
        app:layout_constraintEnd_toEndOf="parent"
...
